<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="eGW-B5-ijs">
    <device id="retina6_12" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Signup View Controller-->
        <scene sceneID="682-yK-WSW">
            <objects>
                <viewController storyboardIdentifier="SignupViewController" id="eGW-B5-ijs" customClass="SignupViewController" customModule="PhotoApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="NPN-vH-hal">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="19" translatesAutoresizingMaskIntoConstraints="NO" id="lSw-9V-zil">
                                <rect key="frame" x="16" y="79" width="361" height="299"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First name" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="y7i-QI-Xqx">
                                        <rect key="frame" x="0.0" y="0.0" width="361" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="firstNameTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="continue" textContentType="given-name"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last name" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="xxb-uD-eoB">
                                        <rect key="frame" x="0.0" y="53" width="361" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="lastNameTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="continue" textContentType="family-name"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="BCR-bi-AAh">
                                        <rect key="frame" x="0.0" y="106" width="361" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="emailTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="continue" textContentType="email"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Mobile phone" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Abo-RN-0FW">
                                        <rect key="frame" x="0.0" y="159" width="361" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="phoneTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" keyboardType="phonePad" returnKeyType="continue" textContentType="tel"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Lac-Zb-71M">
                                        <rect key="frame" x="0.0" y="212" width="361" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="passwordTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" returnKeyType="continue" secureTextEntry="YES" textContentType="password"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Repeat password" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="oT5-MK-8IX">
                                        <rect key="frame" x="0.0" y="265" width="361" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="repeatPasswordTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" returnKeyType="continue" secureTextEntry="YES" textContentType="password"/>
                                    </textField>
                                </subviews>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jbN-P4-0mB">
                                <rect key="frame" x="155.66666666666666" y="409" width="81.666666666666657" height="34.333333333333314"/>
                                <accessibility key="accessibilityConfiguration" identifier="signupButton"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Sign up"/>
                                <connections>
                                    <action selector="signupButtonTapped:" destination="eGW-B5-ijs" eventType="touchUpInside" id="lrB-it-SCa"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="BjW-bv-3sd"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="lSw-9V-zil" firstAttribute="leading" secondItem="BjW-bv-3sd" secondAttribute="leading" constant="16" id="6Zc-tH-Y8y"/>
                            <constraint firstItem="jbN-P4-0mB" firstAttribute="top" secondItem="lSw-9V-zil" secondAttribute="bottom" constant="31" id="9s6-eP-SdB"/>
                            <constraint firstItem="BjW-bv-3sd" firstAttribute="trailing" secondItem="lSw-9V-zil" secondAttribute="trailing" constant="16" id="i8u-kp-0s9"/>
                            <constraint firstItem="lSw-9V-zil" firstAttribute="top" secondItem="BjW-bv-3sd" secondAttribute="top" constant="20" id="ifh-Iy-c7U"/>
                            <constraint firstItem="jbN-P4-0mB" firstAttribute="centerX" secondItem="NPN-vH-hal" secondAttribute="centerX" id="u8c-C3-KUa"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="emailTextField" destination="BCR-bi-AAh" id="vuq-Yg-hoB"/>
                        <outlet property="firstNameTextField" destination="y7i-QI-Xqx" id="4xY-gH-ffi"/>
                        <outlet property="lastNameTextField" destination="xxb-uD-eoB" id="VwY-KR-RFH"/>
                        <outlet property="passwordTextField" destination="Lac-Zb-71M" id="Zmw-aH-QhP"/>
                        <outlet property="phoneTextField" destination="Abo-RN-0FW" id="xW0-II-eAe"/>
                        <outlet property="repeatPasswordTextField" destination="oT5-MK-8IX" id="WyX-Q8-OiW"/>
                        <outlet property="signupButton" destination="jbN-P4-0mB" id="vPL-6U-6fu"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="ISS-F3-BNJ" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="234" y="-69"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
